fix color contrast on links against white background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ ul, ol {
 .btn a {
     color: #fff;
 }
+p a {
+    color: #0051A8;
+    font-weight: bold;
+}
 /*Colours*/
 .fb-color {
     color: #1778F2;
